# mobbrmsd

./: CMakeLists.txt  LICENSE.txt  README.md  api-doc-ford-settings.md  api-doc-index.md  index.html  memo.md  note.md  pr-release.template.erb  pyproject.toml  requirements.txt  search.html  setup.cfg  setup.py  technical_notes.md
src/: CMakeLists.txt  mod_Hungarian.f90  mod_Kabsch.f90  mod_bb_block.f90  mod_bb_list.f90  mod_block_lower_bound.f90  mod_branch.f90  mod_branch_and_prune.f90  mod_c_matrix.f90  mod_cov.f90  mod_d_matrix.f90  mod_det.f90  mod_diagonalize.f90  mod_element.f90  mod_estimate_rotation_matrix.f90  mod_f_matrix.f90  mod_group_permutation.f90  mod_kinds.f90  mod_lower_bound.f90  mod_mobbrmsd.f90  mod_mobbrmsd_batch_run.f90  mod_mobbrmsd_mst.f90  mod_mobbrmsd_state.f90  mod_mol_block.f90  mod_mol_symmetry.f90  mod_molecular_permutation.f90  mod_molecular_rotation.f90  mod_molecule.f90  mod_params.f90  mod_partial_rmsd.f90  mod_pca.f90  mod_permutation.f90  mod_procrustes.f90  mod_rmsd_brute.f90  mod_rotation.f90  mod_svd.f90  mod_symRMSD.f90  mod_tree.f90  mod_tree_.f90  mod_tree__.f90  (+1 more)
src/include/: daxpy.h  dbdsqr.h  dcabs1.h  dcopy.h  ddot.h  dgebak.h  dgebal.h  dgebd2.h  dgebrd.h  dgeev.h  dgehd2.h  dgehrd.h  dgelq2.h  dgelqf.h  dgelss.h  dgemm.h  dgemv.h  dgeqr2.h  dgeqrf.h  dger.h  dgetrf.h  dgetrf2.h  dgetri.h  dgetrs.h  dhseqr.h  disnan.h  dlabad.h  dlabrd.h  dlacpy.h  dladiv.h  dlae2.h  dlaev2.h  dlaexc.h  dlahqr.h  dlahr2.h  dlaisnan.h  dlaln2.h  dlamch.h  dlange.h  dlanst.h  (+145 more)
src/lapack/: lapack_sp.f90  mod_lapack.f90  mod_lapack_dp.f90  mod_lapack_sp.f90  mod_mobbrmsd_lapack.f90
src/lapack/lapack_routine/: dbdsqr.f90  dcopy.f90  dgemm.f90  dgeqrf.f90  dger.f90  dgetrf.f90  dgetrf2.f90  dlange.f90  dlapy2.f90  dlarf.f90  dlarfg.f90  dlarft.f90  dlartg.f90  dlas2.f90  dlascl.f90  dlaset.f90  dlasq5.f90  dlasq6.f90  dlasrt.f90  dlassq.f90  dlasv2.f90  dlaswp.f90  dnrm2.f90  dorg2r.f90  dorgl2.f90  dorglq.f90  dorgqr.f90  dorm2r.f90  dormlq.f90  dscal.f90  dswap.f90  idamax.f90  ieeeck.f90  iladlc.f90  iladlr.f90  ilaenv.f90  ilaslc.f90  ilaslr.f90  iparmq.f90  isamax.f90  (+160 more)
src/lapack/test/: CMakeLists.txt
src/lapack/util/: CMakeLists.txt  dlamch.f90  la_constants.f90  la_xisnan.f90  slamch.f90
src/mobbrmsd/: CMakeLists.txt  __init__.py  __main__.py  _mobbrmsd.py  dataclass.py  demo_batch.py  demo_bb.py  demo_bb_multi.py  demo_mst.py  mobbrmsd.py  mod_bb_block.f90  mod_bb_list.f90  mod_c_matrix.f90  mod_det.f90  mod_f_matrix.f90  mod_group_permutation.f90  mod_iolib.f90  mod_kinds.f90  mod_mobbrmsd.f90  mod_mobbrmsd_batch_run.f90  mod_mobbrmsd_header.f90  mod_mobbrmsd_mst.f90  mod_mobbrmsd_state.f90  mod_mol_block.f90  mod_params.f90  mod_progress_bar.f90  mod_rotation.f90  mod_symRMSD.f90  mod_tree.f90  python_driver.f90  python_driver.py  test_driver.f90
src/mobbrmsd/d2routines/: CMakeLists.txt  gemm.f90  mod_rotation.f90
src/mobbrmsd/d3routines/: CMakeLists.txt
src/mobbrmsd/demo/: CMakeLists.txt  _coord_generator.py  _demo.py  batch.py  batch_tri.py  bb.py  bb_2d.py  bb_multi.py  cogen.py  mst.py
src/mobbrmsd/dgroutines/: CMakeLists.txt  mod_bb_interface_g.f90  mod_rotation.f90
src/mobbrmsd/forbar/: CMakeLists.txt  isatty.c  mod_cycle_iterator.f90  mod_forbar.f90  mod_iolib.f90  mod_optarg.f90  mod_progbar_iterator.f90  mod_progress_bar.f90  mod_repeat_iterator.f90  mod_timing_iterator.f90  mod_word_iterator.f90  test_progress_bar.f90
src/mobbrmsd/include/: daxpy.h  dgesvd.h  dsymm.h  saxpy.h  scopy.h  sgetrf.h
src/mobbrmsd/lapack/: mod_mobbrmsd_lapack.f90  mod_mobbrmsd_lapack_routines.f90  mod_mobbrmsd_lapack_routines_dp.f90  mod_mobbrmsd_lapack_routines_sp.f90
src/mobbrmsd/mobbrmsd/: CMakeLists.txt  blas_lapack_interface.f90  ddot.h  mod_cov.f90  mod_dimspec_functions.f90  mod_rotation.f90  sdot.h
src/mobbrmsd/mobbrmsd_2d/: CMakeLists.txt  blas_lapack_interface.f90  gemm.f90  mod_bb_interface_2d.f90  mod_cov.f90  mod_dimspec_functions.f90  mod_rotation.f90
src/mobbrmsd/mobbrmsd_3d/: CMakeLists.txt  blas_lapack_interface.f90  cos_acos.f90  cosh_acosh.f90  (+5 more)
src/mobbrmsd_fortran/: mod_Hungarian.f90  mod_bb_block.f90  mod_bb_list.f90  mod_c_matrix.f90  mod_f_matrix.f90  mod_group_permutation.f90  mod_mobbrmsd.f90  mod_mobbrmsd_batch_run.f90  mod_mobbrmsd_header.f90  mod_mobbrmsd_mst.f90  mod_mobbrmsd_state.f90  mod_mol_block.f90  mod_params.f90
src/molutil/: CMakeLists.txt  element_set_CH.f90  element_set_default.f90  element_set_heavy.f90  mod_base.f90  mod_bonds.f90  mod_element.f90  mod_element_set.f90  mod_molecular_topology.f90  mod_molecule.f90  mod_optarg.f90  mod_params.f90
src/python_interface/: .f2py_f2cmap  .f2py_f2cmap_sp  CMakeLists.txt  __init__.py  __main__.py  __mobbrmsd__.py  _demo.py  _mobbrmsd.py  coord_generator.py  demo_batch.py  demo_batch_tri.py  demo_bb.py  demo_bb_2d.py  demo_bb_multi.py  demo_bb_sp.py  demo_cogen.py  demo_mst.py  demo_nn.py  preprocessor.py  python_driver.f90  test_driver.f90
src/symRMSD/: CMakeLists.txt  mod_Hungarian.f90  mod_bb_block.f90  mod_bb_manager.f90  mod_branch_and_bound.f90  mod_branch_and_prune.f90  mod_c_matrix.f90  mod_d_matrix.f90  mod_det.f90  mod_estimate_rotation_matrix.f90  mod_f_matrix.f90  mod_group_permutation.f90  mod_lb_manager.f90  mod_lowerbound.f90  mod_mol_block.f90  mod_mol_symmetry.f90  mod_params.f90  mod_rotation.f90  mod_rotation_matrix.f90  mod_s_matrix.f90  mod_symRMSD.f90  mod_tree.f90  python_driver.f90
src/test/: CMakeLists.txt  cov_1.f90  cov_3.f90  test_Hungarian.f90  test_Kabsch.f90  test_block_lower_bound.f90  test_branch_and_prune.f90  test_cov.f90  test_cov_time.f90  test_d_matrix.f90  test_det.f90  test_diagonalize.f90  test_estimate_rotation_matrix.f90  test_group_permutation.f90  test_lower_bound.f90  test_optarg.f90  test_optimize.f90  test_pca.f90  test_procrustes.f90  test_rmsd.f90  test_rmsd_brute.f90  test_rot.f90  test_svd.f90  test_symRMSD.f90  test_tree.f90  test_tree_.f90  test_tree__.f90
src/util/: mod_block_lower_bound.f90  mod_cov.f90  mod_molecular_permutation.f90  mod_pca.f90  mod_rmsd.f90  mod_tril_index.f90
(+839 files in other folders)
