[build-system]
requires = ["scikit-build-core", "numpy", "networkx", "matplotlib", "pick", "tqdm"]
build-backend = "scikit_build_core.build"

[project]
name = "mobbrmsd"
dependencies = ["numpy"]
version = "0.0.23"
readme = "README.md"
license = {file = "LICENSE.txt"}

[tool.scikit-build]
ninja.version = ">=1.10"
cmake.version = ">=3.18"
