[build-system]
requires = ["scikit-build-core", "meson", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "mobbrmsd"
dependencies = ["numpy", "matplotlib", "networkx", "tqdm", "pick", "mdtraj"]
version = "0.0.25"
description = "Molecular-Oriented RMSD with Branch-and-Bound"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
authors = [
  {name = "yymmt742", email = "yymmt@kuchem.kyoto-u.ac.jp" }
  ]
maintainers = [
  {name = "yymmt742", email = "yymmt@kuchem.kyoto-u.ac.jp" }
  ]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  ]


[tool.scikit-build]
ninja.version = ">=1.10"
cmake.version = ">=3.14"
