[metadata]
name = mobbrmsd
version = 0.0.2
description = molecular orientation corrected rmsd with branch-and-bound
long_description = file: README.md
long_description_content_type = text/markdown
author = yymmt742
author_email= yymmt@kuchem.kyoto-u.ac.jp
url="https://github.com/yymmt742/mobbrmsd",
download_url="https://github.com/yymmt742/mobbrmsd",
classifiers =
            Programming Language :: Fortran
            Programming Language :: Python
license = MIT

[options]
packages = src/python_interface
install_requires =
    setuptools
    wheel
    scikit-build
    cmake >= 3.9
    numpy >= 1.21
