[metadata]
name = mobbrmsd
version = attr: src.python_interface.__version__.__version__
description = molecular orientation corrected rmsd with branch-and-bound
long_description = file: README.md
long_description_content_type = text/markdown
author = yymmt742
author_email= yymmt@kuchem.kyoto-u.ac.jp
url="https://github.com/yymmt742/mobbrmsd",
download_url="https://github.com/yymmt742/mobbrmsd",
classifiers =
            Programming Language :: Fortran
            Programming Language :: Python
license = MIT

[options]
packages = src/python_interface
install_requires =
    setuptools
    wheel
    scikit-build
    cmake >= 3.9
    numpy >= 1.21
    networkx >= 3.0
    matplotlib >= 3.6
